updated android library, incremented version, updated icon

--- a/ByteBrewSDK/ByteBrewSDK.uplugin
+++ b/ByteBrewSDK/ByteBrewSDK.uplugin
@@ -1,11 +1,11 @@
 {
-	"FileVersion": 4,
-	"Version": 3,
-	"VersionName": "1.2",
+	"FileVersion": 3,
+	"Version": 4,
+	"VersionName": "1.3",
 	"FriendlyName": "ByteBrewSDK",
 	"Description": "ByteBrew SDK for Unreal",
 	"Category": "Other",
-	"CreatedBy": "Max Wilk",
+	"CreatedBy": "ByteBrew",
 	"CreatedByURL": "",
 	"DocsURL": "",
 	"MarketplaceURL": "",
